libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__value-object.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: "format!(\"{bp:#?}\")"

---
Blueprint {
    version: Some(
        Scalar {
            value: String(
                "2025-11-02",
            ),
            span: Some(
                Span {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Some(
                        Position {
                            line: 1,
                            column: 21,
                        },
                    ),
                },
            ),
        },
    ),
    transform: [],
    variables: NamedMap {
        values: {},
        source_meta: {},
    },
    values: NamedMap {
        values: {
            "featureFlags": Value {
                value_type: Spanned {
                    value: Object,
                    span: Some(
                        Span {
                            start: Position {
                                line: 3,
                                column: 21,
                            },
                            end: Some(
                                Position {
                                    line: 3,
                                    column: 27,
                                },
                            ),
                        },
                    ),
                },
                value: Fields {
                    fields: {
                        "saveOrderEnabled": Scalar(
                            Scalar {
                                value: Bool(
                                    true,
                                ),
                                span: Some(
                                    Span {
                                        start: Position {
                                            line: 5,
                                            column: 28,
                                        },
                                        end: Some(
                                            Position {
                                                line: 5,
                                                column: 32,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        "retryCount": Scalar(
                            Scalar {
                                value: Int(
                                    3,
                                ),
                                span: Some(
                                    Span {
                                        start: Position {
                                            line: 6,
                                            column: 22,
                                        },
                                        end: Some(
                                            Position {
                                                line: 6,
                                                column: 23,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        "backoffSeconds": Scalar(
                            Scalar {
                                value: Float(
                                    1.5,
                                ),
                                span: Some(
                                    Span {
                                        start: Position {
                                            line: 7,
                                            column: 26,
                                        },
                                        end: Some(
                                            Position {
                                                line: 7,
                                                column: 29,
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                    fields_span: {
                        "backoffSeconds": Span {
                            start: Position {
                                line: 7,
                                column: 9,
                            },
                            end: Some(
                                Position {
                                    line: 7,
                                    column: 23,
                                },
                            ),
                        },
                        "retryCount": Span {
                            start: Position {
                                line: 6,
                                column: 9,
                            },
                            end: Some(
                                Position {
                                    line: 6,
                                    column: 19,
                                },
                            ),
                        },
                        "saveOrderEnabled": Span {
                            start: Position {
                                line: 5,
                                column: 9,
                            },
                            end: Some(
                                Position {
                                    line: 5,
                                    column: 25,
                                },
                            ),
                        },
                    },
                    span: Some(
                        Span {
                            start: Position {
                                line: 4,
                                column: 13,
                            },
                            end: Some(
                                Position {
                                    line: 8,
                                    column: 6,
                                },
                            ),
                        },
                    ),
                },
                description: None,
                secret: None,
                span: Some(
                    Span {
                        start: Position {
                            line: 3,
                            column: 7,
                        },
                        end: Some(
                            Position {
                                line: 3,
                                column: 19,
                            },
                        ),
                    },
                ),
            },
        },
        source_meta: {
            "featureFlags": Span {
                start: Position {
                    line: 3,
                    column: 7,
                },
                end: Some(
                    Position {
                        line: 3,
                        column: 19,
                    },
                ),
            },
        },
    },
    include: NamedMap {
        values: {},
        source_meta: {},
    },
    resources: NamedMap {
        values: {},
        source_meta: {},
    },
    data_sources: NamedMap {
        values: {},
        source_meta: {},
    },
    exports: NamedMap {
        values: {},
        source_meta: {},
    },
    metadata: None,
    span: None,
}
