libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__variable-allowedvalues-not-array.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected '[', got string at 1:43
	  1 | variable region: string { allowedValues = "a" }
	    |                                           ^
	- parse error: missing required 'version' directive
