libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__variable-boolean-allowedvalues.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: 'allowedValues' is not valid on a boolean variable at 2:26
	  2 | variable flag: boolean { allowedValues = [true, false] }
	    |                          ^
