libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__variable-description-not-string.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: errs.to_string()

---
blueprint language errors:
	- parse error: expected string, got integer at 2:41
	  2 | variable region: string { description = 42 }
	    |                                         ^
