libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__variable-empty-block.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: "format!(\"{bp:#?}\")"

---
Blueprint {
    version: Some(
        Scalar {
            value: String(
                "2025-11-02",
            ),
            span: Some(
                Span {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Some(
                        Position {
                            line: 1,
                            column: 21,
                        },
                    ),
                },
            ),
        },
    ),
    transform: [],
    variables: NamedMap {
        values: {
            "databaseHost": Variable {
                var_type: Spanned {
                    value: String,
                    span: Some(
                        Span {
                            start: Position {
                                line: 3,
                                column: 24,
                            },
                            end: Some(
                                Position {
                                    line: 3,
                                    column: 30,
                                },
                            ),
                        },
                    ),
                },
                description: None,
                secret: None,
                default: None,
                allowed_values: [],
                span: Some(
                    Span {
                        start: Position {
                            line: 3,
                            column: 10,
                        },
                        end: Some(
                            Position {
                                line: 3,
                                column: 22,
                            },
                        ),
                    },
                ),
            },
        },
        source_meta: {
            "databaseHost": Span {
                start: Position {
                    line: 3,
                    column: 10,
                },
                end: Some(
                    Position {
                        line: 3,
                        column: 22,
                    },
                ),
            },
        },
    },
    values: NamedMap {
        values: {},
        source_meta: {},
    },
    include: NamedMap {
        values: {},
        source_meta: {},
    },
    resources: NamedMap {
        values: {},
        source_meta: {},
    },
    data_sources: NamedMap {
        values: {},
        source_meta: {},
    },
    exports: NamedMap {
        values: {},
        source_meta: {},
    },
    metadata: None,
    span: None,
}
