libs/runtime/blueprint-lang/tests/snapshots/parse_snapshot__variable-float.snap
---
source: blueprint-lang/tests/parse_snapshot.rs
expression: "format!(\"{bp:#?}\")"

---
Blueprint {
    version: Some(
        Scalar {
            value: String(
                "2025-11-02",
            ),
            span: Some(
                Span {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Some(
                        Position {
                            line: 1,
                            column: 21,
                        },
                    ),
                },
            ),
        },
    ),
    transform: [],
    variables: NamedMap {
        values: {
            "threshold": Variable {
                var_type: Spanned {
                    value: Float,
                    span: Some(
                        Span {
                            start: Position {
                                line: 3,
                                column: 21,
                            },
                            end: Some(
                                Position {
                                    line: 3,
                                    column: 26,
                                },
                            ),
                        },
                    ),
                },
                description: Some(
                    Scalar {
                        value: String(
                            "Scaling threshold",
                        ),
                        span: Some(
                            Span {
                                start: Position {
                                    line: 5,
                                    column: 19,
                                },
                                end: Some(
                                    Position {
                                        line: 5,
                                        column: 38,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                secret: None,
                default: Some(
                    Scalar {
                        value: Float(
                            0.75,
                        ),
                        span: Some(
                            Span {
                                start: Position {
                                    line: 4,
                                    column: 15,
                                },
                                end: Some(
                                    Position {
                                        line: 4,
                                        column: 19,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                allowed_values: [
                    Scalar {
                        value: Float(
                            0.5,
                        ),
                        span: Some(
                            Span {
                                start: Position {
                                    line: 6,
                                    column: 22,
                                },
                                end: Some(
                                    Position {
                                        line: 6,
                                        column: 25,
                                    },
                                ),
                            },
                        ),
                    },
                    Scalar {
                        value: Float(
                            0.75,
                        ),
                        span: Some(
                            Span {
                                start: Position {
                                    line: 6,
                                    column: 27,
                                },
                                end: Some(
                                    Position {
                                        line: 6,
                                        column: 31,
                                    },
                                ),
                            },
                        ),
                    },
                    Scalar {
                        value: Float(
                            -1.5,
                        ),
                        span: Some(
                            Span {
                                start: Position {
                                    line: 6,
                                    column: 33,
                                },
                                end: Some(
                                    Position {
                                        line: 6,
                                        column: 37,
                                    },
                                ),
                            },
                        ),
                    },
                ],
                span: Some(
                    Span {
                        start: Position {
                            line: 3,
                            column: 10,
                        },
                        end: Some(
                            Position {
                                line: 3,
                                column: 19,
                            },
                        ),
                    },
                ),
            },
        },
        source_meta: {
            "threshold": Span {
                start: Position {
                    line: 3,
                    column: 10,
                },
                end: Some(
                    Position {
                        line: 3,
                        column: 19,
                    },
                ),
            },
        },
    },
    values: NamedMap {
        values: {},
        source_meta: {},
    },
    include: NamedMap {
        values: {},
        source_meta: {},
    },
    resources: NamedMap {
        values: {},
        source_meta: {},
    },
    data_sources: NamedMap {
        values: {},
        source_meta: {},
    },
    exports: NamedMap {
        values: {},
        source_meta: {},
    },
    metadata: None,
    span: None,
}
